--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,20 +1,29 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Dating App</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active"
+      >Dating App</a
+    >
 
-    @if(accountService.currentUser()){
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      @if(accountService.currentUser()){
       <li class="nav-item">
-        <a routerLink="/members" routerLinkActive="active"  class="nav-link">Matches</a>
+        <a routerLink="/members" routerLinkActive="active" class="nav-link"
+          >Matches</a
+        >
       </li>
       <li class="nav-item">
-        <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+        <a routerLink="/lists" routerLinkActive="active" class="nav-link"
+          >Lists</a
+        >
       </li>
       <li class="nav-item">
-        <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+        <a routerLink="/messages" routerLinkActive="active" class="nav-link"
+          >Messages</a
+        >
       </li>
+      }
     </ul>
-    } @if(accountService.currentUser()){
+    @if(accountService.currentUser()){
     <div dropdown class="dropdown">
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
         >Welcome user</a
