adding middleware and interceptor

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,7 +21,13 @@
           >Messages</a
         >
       </li>
+
       }
+      <li class="nav-item">
+        <a routerLink="/errors" routerLinkActive="active" class="nav-link"
+          >Errors</a
+        >
+      </li>
     </ul>
     @if(accountService.currentUser()){
     <div dropdown class="dropdown">
