--- a/client/src/app/errors/test-errors/test-errors.component.html
+++ b/client/src/app/errors/test-errors/test-errors.component.html
@@ -9,7 +9,7 @@
     Test 404 error
   </button>
   <button class="btn btn-outline-primary me-3" (click)="get500Error()">
-    Test 404 error
+    Test 500 error
   </button>
   <button
     class="btn btn-outline-primary me-3"
@@ -17,4 +17,14 @@
   >
     Test 400 Validation error
   </button>
+
+  @if(validationErrors.length > 0){
+  <div class="row mt-5">
+    <ul class="text-danger">
+      @for (error of validationErrors; track $index) {
+      <li>{{ error }}</li>
+      }
+    </ul>
+  </div>
+  }
 </div>
