--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -4,12 +4,14 @@
     <h1>Your profile</h1>
   </div>
   <div class="col-8">
-    <div class="alert alert-info">
+    @if (editForm?.dirty) {
+    <div class="alert alert-info pb-0">
       <p>
         <strong>Information: </strong>You have made changes. Any unsaved changes
         will be lost.
       </p>
     </div>
+    }
   </div>
   <div class="col-4">
     <div class="card">
@@ -37,14 +39,21 @@
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success col-12">Like</button>
+        <button
+          [disabled]="!editForm.dirty"
+          form="editForm"
+          type="submit"
+          class="btn btn-success col-12"
+        >
+          Save Changes
+        </button>
       </div>
     </div>
   </div>
   <div class="col-8">
     <tabset class="member-tabset">
       <tab heading="About {{ member.knownAs }}">
-        <form action="">
+        <form id="editForm" #editForm="ngForm" (ngSubmit)="updateMember()">
           <h4 class="mt-2">Description</h4>
           <textarea
             class="form-control"
