update client app with updateMember method

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -87,7 +87,7 @@
             <label>Country</label>
             <input
               type="text"
-              [(ngModel)]="member.city"
+              [(ngModel)]="member.country"
               class="form-control mx-2"
               name="country"
             />
