--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,36 +1,20 @@
 <form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
-  <h2 class="text-center">Sign Up</h2>
+  <h2 class="text-center text-primary">Sign Up</h2>
   <hr />
-  <div class="mb-3 form-floating">
-    <input
-      type="text"
-      class="form-control"
-      name="username"
-      formControlName="username"
-      placeholder="Username"
-    />
-    <label>Username</label>
-  </div>
-  <div class="mb-3 form-floating">
-    <input
-      type="password"
-      class="form-control"
-      name="password"
-      formControlName="password"
-      placeholder="Password"
-    />
-    <label>Password</label>
-  </div>
-  <div class="mb-3 form-floating">
-    <input
-      type="password"
-      class="form-control"
-      name="password"
-      formControlName="confirmPassword"
-      placeholder="Confirm Password"
-    />
-    <label>Confirm Password</label>
-  </div>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['username'])"
+    [label]="'Username'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['password'])"
+    [label]="'Password'"
+    [type]="'password'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="$any(registerForm.controls['confirmPassword'])"
+    [label]="'Confirm Password'"
+    [type]="'password'"
+  ></app-text-input>
   <div class="form-group text-center">
     <button class="btn btn-success me-2" type="submit">Register</button>
     <button class="btn btn-default me-2" (click)="cancel()" type="button">
@@ -38,5 +22,3 @@
     </button>
   </div>
 </form>
-
-<p>Form</p>
