--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -44,6 +44,30 @@
       <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">
         Reset filters
       </button>
+      <div class="col">
+        <div class="btn-group float-end">
+          <button
+            type="button"
+            class="btn btn-primary"
+            name="orderBy"
+            (click)="loadMembers()"
+            btnRadio="lastActive"
+            [(ngModel)]="userParams.orderBy"
+          >
+            Last Active
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary"
+            name="orderBy"
+            (click)="loadMembers()"
+            btnRadio="created"
+            [(ngModel)]="userParams.orderBy"
+          >
+            Newest members
+          </button>
+        </div>
+      </div>
     </form>
   </div>
   @for (member of memberService.paginationResult()?.items; track member.id) {
