--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -14,7 +14,7 @@
           class="form-control ms-1"
           style="width: 70px"
           name="minAge"
-          [(ngModel)]="userParams.minAge"
+          [(ngModel)]="memberService.userParams().minAge"
         />
       </div>
       <div class="d-flex mx-2">
@@ -24,7 +24,7 @@
           class="form-control ms-1"
           style="width: 70px"
           name="maxAge"
-          [(ngModel)]="userParams.maxAge"
+          [(ngModel)]="memberService.userParams().maxAge"
         />
       </div>
       <div class="d-flex mx-2">
@@ -33,7 +33,7 @@
           name="gender"
           style="width: 130px"
           class="form-select ms-1"
-          [(ngModel)]="userParams.gender"
+          [(ngModel)]="memberService.userParams().gender"
         >
           @for (gender of genderList; track gender.value) {
           <option [value]="gender.value">{{ gender.display }}</option>
@@ -52,7 +52,7 @@
             name="orderBy"
             (click)="loadMembers()"
             btnRadio="lastActive"
-            [(ngModel)]="userParams.orderBy"
+            [(ngModel)]="memberService.userParams().orderBy"
           >
             Last Active
           </button>
@@ -62,7 +62,7 @@
             name="orderBy"
             (click)="loadMembers()"
             btnRadio="created"
-            [(ngModel)]="userParams.orderBy"
+            [(ngModel)]="memberService.userParams().orderBy"
           >
             Newest members
           </button>
