--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -13,7 +13,9 @@
         >
           <i class="fa fa-user"></i>
         </button>
-        <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+        <button class="btn btn-primary" (click)="toggleLike()">
+          <i class="fa fa-heart"></i>
+        </button>
         <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
       </li>
     </ul>
