--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -32,10 +32,29 @@
     </div>
   </div>
   <div class="row mt-3">
-    @for (member of members; track member.id) {
+    @for (member of likesService.paginationResult()?.items; track member.id) {
     <div class="col-2">
       <app-member-card [member]="member"></app-member-card>
     </div>
     }
   </div>
 </div>
+
+@if (likesService.paginationResult()?.pagination) {
+<div class="d-flex justify-content-center">
+  <pagination
+    [boundaryLinks]="true"
+    [totalItems]="(likesService.paginationResult()?.pagination)!.totalItems"
+    [itemsPerPage]="(likesService.paginationResult()?.pagination)!.itemsPerPage"
+    (pageChanged)="pageChanged($event)"
+    [(ngModel)]="(likesService.paginationResult()?.pagination)!.currentPage"
+    [maxSize]="10"
+    previousText="&lsaquo;"
+    nextText="&rsaquo;"
+    firstText="&laquo;"
+    lastText="&raquo;"
+  >
+  </pagination>
+</div>
+
+}
