--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,1 +1,3 @@
-<p>messages works!</p>
+@for (message of messageService.paginationResult()?.items; track message.id) {
+<p>{{ message.content }}</p>
+}
