--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -33,19 +33,26 @@
       </div>
     </div>
   </div>
-  <div class="col-8">
+  <div class="col-8" #memberTabs>
     <tabset class="member-tabset">
-      <tab heading="About {{ member.knownAs }}">
+      <tab
+        heading="About {{ member.knownAs }}"
+        (selectTab)="onTabActivated($event)"
+      >
         <h4>Description</h4>
         <p>{{ member.introduction }}</p>
         <h4>Lokking for</h4>
         <p>{{ member.lookingFor }}</p>
       </tab>
-      <tab heading="Interest">
+      <tab heading="Interest" (selectTab)="onTabActivated($event)">
         <h4>Interest</h4>
         <p>{{ member.interests }}</p>
       </tab>
-      <tab heading="Photos" #photoTab="tab">
+      <tab
+        heading="Photos"
+        #photoTab="tab"
+        (selectTab)="onTabActivated($event)"
+      >
         @if(photoTab.active){
         <gallery
           [items]="images"
@@ -56,8 +63,11 @@
         </gallery>
         }
       </tab>
-      <tab heading="Messages">
-        <app-member-messages [username]="member.username"></app-member-messages>
+      <tab heading="Messages" (selectTab)="onTabActivated($event)">
+        <app-member-messages
+          [username]="member.username"
+          [messages]="messages"
+        ></app-member-messages>
       </tab>
     </tabset>
   </div>
