using query params

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -44,7 +44,10 @@
   <tbody class="align-middle">
     @for (message of messageService.paginationResult()?.items; track message.id)
     {
-    <tr routerLink="{{ getRoute(message) }}">
+    <tr
+      routerLink="{{ getRoute(message) }}"
+      [queryParams]="{ tab: 'Messages' }"
+    >
       <td>{{ message.content }}</td>
       <td>
         <div>
