--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -16,7 +16,13 @@
         <button class="btn btn-primary" (click)="toggleLike()">
           <i class="fa fa-heart"></i>
         </button>
-        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+        <button
+          routerLink="/members/{{ member().username }}"
+          [queryParams]="{ tab: 'Messages' }"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-envelope"></i>
+        </button>
       </li>
     </ul>
   </div>
