--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -28,13 +28,15 @@
       <div class="card-footer">
         <div class="btn-group d-flex">
           <button class="btn btn-primary">Like</button>
-          <button class="btn btn-success">Message</button>
+          <button class="btn btn-success" (click)="selectTab('Messages')">
+            Message
+          </button>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-8" #memberTabs>
-    <tabset class="member-tabset">
+  <div class="col-8">
+    <tabset class="member-tabset" #memberTabs>
       <tab
         heading="About {{ member.knownAs }}"
         (selectTab)="onTabActivated($event)"
