deleting messages on the API

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -29,8 +29,9 @@
   </div>
 </div>
 
-@if (!messageService.paginationResult()?.items) {
-<h3>No Messages</h3>
+@if (!messageService.paginationResult()?.items ||
+messageService.paginationResult()?.items?.length === 0) {
+<h3 class="mt-3">No Messages</h3>
 }@else {
 <table class="table table-hover mt-3" style="cursor: pointer">
   <thead>
@@ -53,7 +54,7 @@
         <div>
           <img
             [src]="
-              container === 'Outbox'
+              isOutbox
                 ? message.recipientPhotoUrl || './assets/user.png'
                 : message.senderPhotoUrl || './assets/user.png'
             "
@@ -61,9 +62,7 @@
             class="rounded-circle me-2"
           />
           <strong>{{
-            container === "Outbox"
-              ? message.recipientUsername
-              : message.senderUsername
+            isOutbox ? message.recipientUsername : message.senderUsername
           }}</strong>
         </div>
       </td>
@@ -73,7 +72,8 @@
     }
   </tbody>
 </table>
-} @if (messageService.paginationResult()?.pagination) {
+} @if (messageService.paginationResult()?.pagination &&
+messageService.paginationResult()?.pagination?.totalItems! > 0 ) {
 <div class="d-flex justify-content-center">
   <pagination
     [boundaryLinks]="true"
