--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -27,11 +27,11 @@
         >
       </li>
       }
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a routerLink="/errors" routerLinkActive="active" class="nav-link"
           >Errors</a
         >
-      </li>
+      </li> -->
     </ul>
     @if(accountService.currentUser()){
     <div dropdown class="dropdown">
